--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
-        "lint": "npx eslint \"src/**/*.{js,jsx,ts,tsx,html}\"",
-        "lint:fix": "npx eslint \"src/**/*.{js,jsx,ts,tsx,html}\" --quiet --fix",
+        "lint": "npx eslint \"src/**/*.{js,jsx,ts,tsx,html}\"  --quiet --fix",
         "format": "npx prettier \"src/**/*.{js,jsx,ts,tsx,html,css,scss}\" --write",
         "prepare": "husky install"
     },
