--- a/angular.json
+++ b/angular.json
@@ -3,32 +3,32 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "main": {
+    "resumator": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
         }
       },
-      "root": "projects/main",
-      "sourceRoot": "projects/main/src",
+      "root": "projects/resumator",
+      "sourceRoot": "projects/resumator/src",
       "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/main",
-            "index": "projects/main/src/index.html",
-            "main": "projects/main/src/main.ts",
-            "polyfills": "projects/main/src/polyfills.ts",
-            "tsConfig": "projects/main/tsconfig.app.json",
+            "outputPath": "dist/resumator",
+            "index": "projects/resumator/src/index.html",
+            "main": "projects/resumator/src/main.ts",
+            "polyfills": "projects/resumator/src/polyfills.ts",
+            "tsConfig": "projects/resumator/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "projects/main/src/favicon.ico",
-              "projects/main/src/assets"
+              "projects/resumator/src/favicon.ico",
+              "projects/resumator/src/assets"
             ],
             "styles": [
-              "projects/main/src/styles.scss"
+              "projects/resumator/src/styles.scss"
             ],
             "scripts": []
           },
@@ -48,8 +48,8 @@
               ],
               "fileReplacements": [
                 {
-                  "replace": "projects/main/src/environments/environment.ts",
-                  "with": "projects/main/src/environments/environment.prod.ts"
+                  "replace": "projects/resumator/src/environments/environment.ts",
+                  "with": "projects/resumator/src/environments/environment.prod.ts"
                 }
               ],
               "outputHashing": "all"
@@ -69,10 +69,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "main:build:production"
+              "browserTarget": "resumator:build:production"
             },
             "development": {
-              "browserTarget": "main:build:development"
+              "browserTarget": "resumator:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -80,23 +80,23 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "main:build"
+            "browserTarget": "resumator:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/main/src/test.ts",
-            "polyfills": "projects/main/src/polyfills.ts",
-            "tsConfig": "projects/main/tsconfig.spec.json",
-            "karmaConfig": "projects/main/karma.conf.js",
+            "main": "projects/resumator/src/test.ts",
+            "polyfills": "projects/resumator/src/polyfills.ts",
+            "tsConfig": "projects/resumator/tsconfig.spec.json",
+            "karmaConfig": "projects/resumator/karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "projects/main/src/favicon.ico",
-              "projects/main/src/assets"
+              "projects/resumator/src/favicon.ico",
+              "projects/resumator/src/assets"
             ],
             "styles": [
-              "projects/main/src/styles.scss"
+              "projects/resumator/src/styles.scss"
             ],
             "scripts": []
           }
@@ -105,8 +105,8 @@
           "builder": "@angular-eslint/builder:lint",
           "options": {
             "lintFilePatterns": [
-              "projects/main/**/*.ts",
-              "projects/main/**/*.html"
+              "projects/resumator/**/*.ts",
+              "projects/resumator/**/*.html"
             ]
           }
         }
