--- a/package.json
+++ b/package.json
@@ -37,15 +37,18 @@
         "@types/jasmine": "~4.0.0",
         "@typescript-eslint/eslint-plugin": "5.37.0",
         "@typescript-eslint/parser": "5.37.0",
+        "autoprefixer": "^10.4.12",
         "eslint": "^8.23.1",
         "eslint-config-prettier": "^8.5.0",
+        "husky": "^8.0.0",
         "jasmine-core": "~4.3.0",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.1.0",
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.0.0",
-        "typescript": "~4.7.2",
-        "husky": "^8.0.0"
+        "postcss": "^8.4.17",
+        "tailwindcss": "^3.1.8",
+        "typescript": "~4.7.2"
     }
 }
