--- a/projects/resumator/.eslintrc.json
+++ b/projects/resumator/.eslintrc.json
@@ -10,8 +10,8 @@
       ],
       "parserOptions": {
         "project": [
-          "projects/main/tsconfig.app.json",
-          "projects/main/tsconfig.spec.json"
+          "projects/resumator/tsconfig.app.json",
+          "projects/resumator/tsconfig.spec.json"
         ],
         "createDefaultProgram": true
       },
